feat: implementar sistema completo de gestión de clientes con API RENIEC
- Agregado módulo completo de Clientes (CRUD completo)
- Implementada búsqueda de clientes por DNI con API RENIEC
- Integrado componente BusquedaCliente reutilizable en módulo de Salidas
- Agregada funcionalidad para agregar clientes automáticamente desde RENIEC
- Implementado dropdown para seleccionar clientes existentes
- Integrado sistema de clientes en módulo de Salidas/Ventas
- Agregada validación de DNI único en base de datos
- Implementada lógica de eliminación lógica de clientes
- Agregados endpoints REST para gestión completa de clientes
- Integrado mapeo de clientes en entidades de Salida
- Sistema permite agregar clientes desde ventas o módulo independiente 03/09